# venom-renderer

./: .gitignore  CMakeLists.txt  README.md  Venom Renderer.sln
Venom Renderer/: Camera.h  Face.h  Material.h  Mesh.h  OBJLoader.h  Octree.h  Primitives.h  Ray.h  SurfaceProperties.h  Tracer.h  Venom Renderer.cpp  Venom Renderer.vcxproj  Venom Renderer.vcxproj.filters  Voxel.h
Venom Renderer/Assets/: cube.mtl  venom_sample_scene.mtl
assets/sample-scenes/: cube_sample_scene.mtl  venom_sample_scene.mtl
ext/TinyOBJLoader/: tiny_obj_loader.h
include/: Camera.h  Face.h  HitInfo.h  Mesh.h  OBJLoader.h  Octree.h  RayTriangleIntersection.h  Tracer.h  TriangleBoxIntersection.h  Vertex.h  acceleration.h  hitinfo.h  octree.h  ray.h  raytriangleintersection.h  triangleboxintersection.h  voxel.h
src/: main.cpp
test/loader/: CMakeLists.txt  loadertest.cpp
venom/: main.cpp  material.h  mesh.h  objloader.h  tracer.h
